# pytest-memray

./: .bumpversion.cfg  .gitignore  .readthedocs.yaml  .readthedocs.yml  MAINTAINANCE.md  MANIFEST.in  Makefile  NEWS.rst  README.md  docker-compose.yml  pyproject.toml  requirements-docs.txt  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: ---bug-report.md  ---feature-request.md
.github/workflows/: build.yml  build_dist.yml  build_wheels.yml
docs/: Makefile  api.rst  conf.py  configuration.rst  index.rst  installation.rst  news.rst  usage.rst
docs/demo/: test_ok.py
docs/news/: 10.feature.rst  107.feature.rst  11.feature.rst  113.bugfix.rst  117.feature.rst  12.doc.rst  12.feature.rst  142.feature.rst  142.removal.rst  18.feature.rst  20.doc.rst  26.doc.rst  28.feature.rst  3.bugfix.rst  30.doc.rst  5.feature.rst  57.feature.rst  58.feature.rst  60.bugfix.rst  91.feature.rst
src/pytest_memray/: __init__.py  marks.py  plugin.py  utils.py
tests/: test_object_tracking.py  test_pytest_memray.py  test_pytest_pensieve.py  test_utils.py
tests/unit/: test_utils.py
