[build-system]
build-backend = "hatchling.build"
requires = ["hatchling>=1.12.2", "hatch-vcs>=0.3"]

[project]
name = "pytest-memray"
description = "A simple plugin to use with pytest"
readme.file = "README.md"
readme.content-type = "text/markdown"
license = "apache-2.0"
urls."Bug Tracker" = "https://github.com/bloomberg/pytest-memray/issues"
urls.Documentation = "https://pytest-memray.readthedocs.io"
urls."Source Code" = "https://github.com/bloomberg/pytest-memray"
authors = [
  { name = "Pablo Galindo Salgado", email = "pgalindo3@bloomberg.net" },
]
maintainers = [
  { name = "Pablo Galindo Salgado", email = "pgalindo3@bloomberg.net" },
]
requires-python = ">=3.8"
dependencies = [
  "pytest>=7.2",
  "memray>=1.19.1",
]
optional-dependencies.docs = [
  "furo>=2022.12.7",
  "sphinx>=6.1.3",
  "sphinx-argparse>=0.4",
  "sphinx-inline-tabs>=2022.1.2b11",
  "sphinxcontrib-programoutput>=0.17",
  "towncrier>=22.12",
]
optional-dependencies.lint = [
  "black==25.1.0",
  "ruff==0.12.7",
  "isort==6.0.1",
  "mypy==1.17.1",
]
optional-dependencies.test = [
  "anyio>=4.4.0",
  "covdefaults>=2.2.2",
  "pytest>=7.2",
  "coverage>=7.0.5",
  "flaky>=3.7",
  "pytest-xdist>=3.1",
]
dynamic = ["version"]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Software Development :: Debuggers",
]

[project.entry-points.pytest11]
memray = "pytest_memray.plugin"

[tool.hatch]
build.dev-mode-dirs = ["src"]
build.hooks.vcs.version-file = "src/pytest_memray/_version.py"
build.hooks.vcs.template = "__version__ = \"{version}\"\n"
version.source = "vcs"
build.targets.sdist.include = ["/Makefile", "/tox.ini", "/src", "/tests", "/docs"]

[tool.black]
line-length = 88

[tool.coverage]
run.dynamic_context = "test_function"
run.source = ["pytest_memray", "tests"]
run.plugins = ["covdefaults"]
run.parallel = true
report.fail_under = 97
html.show_contexts = true
html.skip_covered = false
paths.source = [
  "src",
  ".tox*/*/lib/python*/site-packages",
  ".tox*/pypy*/site-packages",
  ".tox*\\*\\Lib\\site-packages",
  "*/src",
  "*\\src",
]

[tool.mypy]
python_version = "3.14"
show_error_codes = true
strict = true

[tool.isort]
force_single_line = true
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
known_first_party = ["pytest_memray"]

[tool.towncrier]
name = "pytest-memray"
filename = "docs/news.rst"
directory = "docs/news"
title_format = false
issue_format = ":issue:`{issue}`"
template = "docs/news/template.jinja2"
type = [
  { name = "Features", directory = "feature", showcontent = true },
  { name = "Deprecations and Removals", directory = "removal", showcontent = true },
  { name = "Bug Fixes", directory = "bugfix", showcontent = true },
  { name = "Improved Documentation", directory = "doc", showcontent = true },
  { name = "Miscellaneous", directory = "misc", showcontent = true },
]

[tool.ruff]
line-length = 95

[tool.ruff.lint]
ignore = ['E501']
select = [
    'E',
    'F',
    'W',
]
isort = {known-first-party = ["pytest_memray"], required-imports = ["from __future__ import annotations"]}
